--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "http-server",
     "lint": "eslint",
-    "build": "webpack",
+    "build": "NODE_ENV=development webpack",
+    "build:prod": "webpack",
     "nodemon": "nodemon"
   },
   "repository": {
